[package]
name = "mapreduce-rs"
version = "0.1.0"
authors = ["Yogafire <yogafirew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.1"
prost = "0.7.0"
tokio = { version = "1", features = ["macros"] }

[build-dependencies]
tonic-build = "0.4.1"
